[tool.poetry]
name = "inhouse-day-cognac"
version = "0.1.0"
description = "Poetry environment for the inhouse day for congac"
authors = ["marlousnijman <marlous.nijman@nedap.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.12"
pandas = "^2.1.1"
ipykernel = "^6.25.2"
scipy = "^1.11.3"
numpy = "^1.26.0"
scikit-learn = "^1.3.1"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
